--- a/trade_config.json
+++ b/trade_config.json
@@ -44,6 +44,28 @@
 		"23": 0,
 		"24": 0
 	},
+	"resourceSelling": {
+		"2": 0,
+		"3": 1,
+		"4": 1,
+		"6": 1,
+		"8": 0,
+		"9": 0,
+		"10": 0,
+		"11": 0,
+		"12": 0,
+		"13": 0,
+		"14": 1,
+		"16": 1,
+		"17": 0,
+		"18": 0,
+		"19": 0,
+		"20": 0,
+		"21": 0,
+		"22": 0,
+		"23": 0,
+		"24": 0
+	},
 	"resourcesToSell": [3, 4, 6, 14, 16],
-	"sellResourcesInterval": 30000
+	"sellResourcesInterval": 5000
 }
