add unit properties

--- a/defaultConfigs.json
+++ b/defaultConfigs.json
@@ -1,1 +1,1 @@
-{"BotSettings":"vanilla","Market":"vanilla","Prices":"vanilla","StartGoods":"vanilla","StartTroops":"vanilla"}
+{"BotSettings":"vanilla","Market":"vanilla","Prices":"vanilla","StartGoods":"vanilla","StartTroops":"vanilla","UnitProperties":"vanilla"}
